--- a/index.html
+++ b/index.html
@@ -2,265 +2,124 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>KKA - Etika AI</title>
+<title>Aplikasi Pembelajaran Informatika & KKA</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{
- font-family:Segoe UI,sans-serif;
- background:linear-gradient(135deg,#1e3c72,#2a5298);
- margin:0;
-}
-.container{
- max-width:900px;
- margin:auto;
- background:white;
- padding:20px;
- border-radius:12px;
- margin-top:30px;
-}
-h1,h2{text-align:center;color:#1e3c72;}
-button{
- width:100%;
- padding:12px;
- margin:8px 0;
- border-radius:10px;
- background:#1e3c72;
- color:white;
- border:none;
- font-size:16px;
- cursor:pointer;
-}
-button:hover{background:#2a5298;}
-.hidden{display:none;}
-.card{
- background:#f5f7fa;
- padding:15px;
- border-radius:10px;
- margin-top:15px;
-}
-input,select,textarea{
- width:100%;
- padding:10px;
- margin:6px 0;
- border-radius:8px;
-}
-.menu-btn{
- font-size:18px;
-}
-.back{
- background:#999;
-}
+body{font-family:Segoe UI,Arial,sans-serif;margin:0;background:#f2f4f8}
+header{background:#1e3c72;color:#fff;padding:15px;text-align:center}
+.container{max-width:1000px;margin:auto;padding:20px}
+.menu button{padding:12px 16px;margin:6px;border:none;border-radius:8px;background:#1e3c72;color:#fff;cursor:pointer}
+.menu button:hover{background:#2a5298}
+.card{background:#fff;border-radius:10px;padding:15px;margin:15px 0}
+.hidden{display:none}
+input,textarea,select{width:100%;padding:10px;margin:6px 0;border-radius:6px;border:1px solid #ccc}
+.back{background:#777}
+a{color:#1e3c72}
 </style>
 </head>
-
 <body>
+<header>
+<h1>Aplikasi Pembelajaran SMA</h1>
+<p>Informatika & KKA</p>
+</header>
+
 <div class="container">
 
-<h1>📘 Media Pembelajaran KKA<br>Etika Penggunaan AI</h1>
-
 <!-- LOGIN -->
-<div id="loginBox">
-<h2>Login</h2>
-<input id="loginUser" placeholder="Username">
-<input id="loginPass" type="password" placeholder="Password">
+<div id="loginBox" class="card">
+<h2>Login Guru</h2>
+<input id="user" placeholder="Username">
+<input id="pass" type="password" placeholder="Password">
 <button onclick="login()">Login</button>
-<button onclick="showRegister()">Daftar Siswa</button>
 </div>
 
-<!-- REGISTER -->
-<div id="registerBox" class="hidden">
-<h2>Registrasi Siswa</h2>
-<input id="regNama" placeholder="Nama Lengkap">
-<input id="regUser" placeholder="Username">
-<select id="regKelas"></select>
-<select id="regAbsen"></select>
-<input id="regPass" type="password" placeholder="Password">
-<button onclick="register()">Daftar</button>
-<button class="back" onclick="backLogin()">Kembali</button>
-</div>
-
-<!-- MENU SISWA -->
-<div id="menuSiswa" class="hidden">
-<h2>👨‍🎓 Menu Siswa</h2>
-<button class="menu-btn" onclick="bukaMateri()">📘 Link Materi</button>
-<button class="menu-btn" onclick="bukaKuis()">📝 Latihan (Kuis)</button>
+<!-- MENU UTAMA -->
+<div id="mainMenu" class="menu hidden">
+<h2>Pilih Menu</h2>
+<button onclick="openMapel('informatika')">📘 Informatika</button>
+<button onclick="openMapel('kka')">🤖 KKA</button>
+<button onclick="openGuru()">👩‍🏫 Menu Guru</button>
 <button class="back" onclick="logout()">Logout</button>
 </div>
 
-<!-- MATERI -->
+<!-- MATERI MAPEL -->
 <div id="materiBox" class="hidden">
-<h2>📘 Materi</h2>
-<div class="card" id="materiTampil"></div>
-<button class="back" onclick="kembaliMenu()">⬅ Kembali ke Menu</button>
+<h2 id="judulMapel"></h2>
+<div id="materiList"></div>
+<button class="back" onclick="backMenu()">⬅ Kembali</button>
 </div>
 
-<!-- KUIS -->
-<div id="kuisBox" class="hidden">
-<h2>📝 Latihan (Kuis)</h2>
-<div class="card">
-<div id="kuisTampil"></div>
-<button onclick="submitQuiz()">Kirim Jawaban</button>
-<p id="hasil"></p>
-</div>
-<button class="back" onclick="kembaliMenu()">⬅ Kembali ke Menu</button>
-</div>
-
-<!-- GURU -->
+<!-- MENU GURU -->
 <div id="guruBox" class="hidden">
-<h2>👩‍🏫 Dashboard Guru</h2>
-
-<div class="card">
-<h3>➕ Tambah Materi</h3>
-<input id="judulMateri" placeholder="Judul Materi">
-<textarea id="isiMateri" placeholder="Isi Materi"></textarea>
-<button onclick="tambahMateri()">Simpan Materi</button>
-</div>
-
-<div class="card">
-<h3>➕ Tambah Soal</h3>
-<textarea id="pertanyaan" placeholder="Pertanyaan"></textarea>
-<input id="opsiA" placeholder="Opsi A">
-<input id="opsiB" placeholder="Opsi B">
-<input id="opsiC" placeholder="Opsi C">
-<input id="opsiD" placeholder="Opsi D">
-<input id="opsiE" placeholder="Opsi E">
-<select id="jawaban">
-<option value="">Jawaban Benar</option>
-<option>A</option><option>B</option><option>C</option>
-<option>D</option><option>E</option>
+<h2>Menu Guru – Tambah Materi</h2>
+<select id="mapel">
+<option value="informatika">Informatika</option>
+<option value="kka">KKA</option>
 </select>
-<input id="skorSoal" type="number" placeholder="Skor Soal">
-<button onclick="tambahSoal()">Simpan Soal</button>
-</div>
-
-<button class="back" onclick="logout()">Logout</button>
+<input id="judul" placeholder="Judul Materi">
+<textarea id="isi" placeholder="Isi materi (teks)"></textarea>
+<input id="file" placeholder="Link file PDF/DOCX (Google Drive, dll)">
+<input id="video" placeholder="Link video YouTube">
+<button onclick="simpanMateri()">Simpan Materi</button>
+<button class="back" onclick="backMenu()">⬅ Kembali</button>
 </div>
 
 </div>
 
 <script>
-// INIT SELECT
-for(let i=1;i<=10;i++) regKelas.innerHTML+=`<option>X-${i}</option>`;
-for(let i=1;i<=40;i++) regAbsen.innerHTML+=`<option>${i}</option>`;
+// data awal
+let users=[{u:'guru',p:'admin123'}];
+let materi=JSON.parse(localStorage.getItem('materi'))||{informatika:[],kka:[]};
+let currentMapel='';
 
-// DATABASE
-let users = JSON.parse(localStorage.getItem("users")) || [
- {username:"guru",password:"admin123",role:"guru"}
-];
-localStorage.setItem("users",JSON.stringify(users));
-
-let materi = JSON.parse(localStorage.getItem("materi")) || [];
-let soal = JSON.parse(localStorage.getItem("soal")) || [];
-let scores = JSON.parse(localStorage.getItem("scores")) || [];
-
-let currentUser="";
-
-// LOGIN
 function login(){
- const u=loginUser.value,p=loginPass.value;
- const user=users.find(x=>x.username===u&&x.password===p);
- if(!user){alert("Login gagal");return;}
- loginBox.classList.add("hidden");
- if(user.role==="guru"){
-  guruBox.classList.remove("hidden");
- }else{
-  menuSiswa.classList.remove("hidden");
-  currentUser=u;
- }
+ let u=user.value,p=pass.value;
+ let ok=users.find(x=>x.u===u&&x.p===p);
+ if(!ok){alert('Login gagal');return;}
+ loginBox.classList.add('hidden');
+ mainMenu.classList.remove('hidden');
 }
+function logout(){location.reload();}
 
-// REGISTER
-function showRegister(){
- loginBox.classList.add("hidden");
- registerBox.classList.remove("hidden");
-}
-function backLogin(){
- registerBox.classList.add("hidden");
- loginBox.classList.remove("hidden");
-}
-function register(){
- users.push({
-  nama:regNama.value,
-  username:regUser.value,
-  password:regPass.value,
-  kelas:regKelas.value,
-  absen:regAbsen.value,
-  role:"siswa"
- });
- localStorage.setItem("users",JSON.stringify(users));
- alert("Registrasi berhasil");
- backLogin();
-}
-
-// MENU NAVIGASI SISWA
-function bukaMateri(){
- menuSiswa.classList.add("hidden");
- materiBox.classList.remove("hidden");
+function openMapel(m){
+ currentMapel=m;
+ mainMenu.classList.add('hidden');
+ materiBox.classList.remove('hidden');
+ judulMapel.innerText=m==='informatika'?'Materi Informatika':'Materi KKA';
  tampilMateri();
 }
-function bukaKuis(){
- menuSiswa.classList.add("hidden");
- kuisBox.classList.remove("hidden");
- tampilSoal();
-}
-function kembaliMenu(){
- materiBox.classList.add("hidden");
- kuisBox.classList.add("hidden");
- menuSiswa.classList.remove("hidden");
-}
 
-// MATERI
-function tambahMateri(){
- materi.push({judul:judulMateri.value,isi:isiMateri.value});
- localStorage.setItem("materi",JSON.stringify(materi));
- alert("Materi disimpan");
-}
 function tampilMateri(){
- materiTampil.innerHTML="";
- materi.forEach(m=>{
-  materiTampil.innerHTML+=`<h4>${m.judul}</h4><p>${m.isi}</p>`;
+ materiList.innerHTML='';
+ materi[currentMapel].forEach(m=>{
+  materiList.innerHTML+=`
+  <div class='card'>
+  <h3>${m.judul}</h3>
+  <p>${m.isi}</p>
+  ${m.file?`<p>📎 <a href='${m.file}' target='_blank'>File Materi</a></p>`:''}
+  ${m.video?`<p>🎥 <a href='${m.video}' target='_blank'>Video Pembelajaran</a></p>`:''}
+  </div>`;
  });
 }
 
-// SOAL
-function tambahSoal(){
- soal.push({
-  tanya:pertanyaan.value,
-  opsi:{A:opsiA.value,B:opsiB.value,C:opsiC.value,D:opsiD.value,E:opsiE.value},
-  jawab:jawaban.value,
-  skor:Number(skorSoal.value)
- });
- localStorage.setItem("soal",JSON.stringify(soal));
- alert("Soal ditambahkan");
-}
-function tampilSoal(){
- kuisTampil.innerHTML="";
- soal.forEach((s,i)=>{
-  let opsiHTML="";
-  for(let k in s.opsi){
-   opsiHTML+=`<label><input type="radio" name="q${i}" value="${k}"> ${k}. ${s.opsi[k]}</label><br>`;
-  }
-  kuisTampil.innerHTML+=`
-  <p><b>${i+1}. ${s.tanya}</b> (${s.skor} poin)</p>
-  ${opsiHTML}
-  `;
- });
+function openGuru(){
+ mainMenu.classList.add('hidden');
+ guruBox.classList.remove('hidden');
 }
 
-// QUIZ
-function submitQuiz(){
- let total=0;
- soal.forEach((s,i)=>{
-  const pilih=document.querySelector(`input[name="q${i}"]:checked`);
-  if(pilih && pilih.value===s.jawab) total+=s.skor;
- });
- scores.push({user:currentUser,nilai:total});
- localStorage.setItem("scores",JSON.stringify(scores));
- hasil.innerHTML="Nilai Anda: <b>"+total+"</b>";
+function simpanMateri(){
+ let m=mapel.value;
+ materi[m].push({judul:judul.value,isi:isi.value,file:file.value,video:video.value});
+ localStorage.setItem('materi',JSON.stringify(materi));
+ alert('Materi disimpan');
+ judul.value=isi.value=file.value=video.value='';
 }
 
-function logout(){location.reload();}
+function backMenu(){
+ materiBox.classList.add('hidden');
+ guruBox.classList.add('hidden');
+ mainMenu.classList.remove('hidden');
+}
 </script>
-
 </body>
 </html>
