--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <style>
 body{font-family:Segoe UI,Arial,sans-serif;margin:0;background:#f2f4f8}
 header{background:#1e3c72;color:#fff;padding:15px;text-align:center}
-.container{max-width:1000px;margin:auto;padding:20px}
-.menu button{padding:12px 16px;margin:6px;border:none;border-radius:8px;background:#1e3c72;color:#fff;cursor:pointer}
-.menu button:hover{background:#2a5298}
+.container{max-width:1100px;margin:auto;padding:20px}
+button{padding:12px 16px;margin:6px;border:none;border-radius:8px;background:#1e3c72;color:#fff;cursor:pointer}
+button:hover{background:#2a5298}
+.back{background:#777}
 .card{background:#fff;border-radius:10px;padding:15px;margin:15px 0}
 .hidden{display:none}
 input,textarea,select{width:100%;padding:10px;margin:6px 0;border-radius:6px;border:1px solid #ccc}
-.back{background:#777}
 a{color:#1e3c72}
 </style>
 </head>
@@ -27,98 +27,148 @@ a{color:#1e3c72}
 
 <!-- LOGIN -->
 <div id="loginBox" class="card">
-<h2>Login Guru</h2>
-<input id="user" placeholder="Username">
-<input id="pass" type="password" placeholder="Password">
-<button onclick="login()">Login</button>
+<h2>Login</h2>
+<input id="loginUser" placeholder="Nama Lengkap">
+<button onclick="loginSiswa()">Login Siswa</button>
+<button onclick="showRegister()">Daftar Siswa</button>
+<hr>
+<h3>Login Guru</h3>
+<input id="guruUser" placeholder="Username">
+<input id="guruPass" type="password" placeholder="Password">
+<button onclick="loginGuru()">Login Guru</button>
 </div>
 
-<!-- MENU UTAMA -->
-<div id="mainMenu" class="menu hidden">
-<h2>Pilih Menu</h2>
-<button onclick="openMapel('informatika')">📘 Informatika</button>
-<button onclick="openMapel('kka')">🤖 KKA</button>
-<button onclick="openGuru()">👩‍🏫 Menu Guru</button>
+<!-- REGISTER SISWA -->
+<div id="registerBox" class="card hidden">
+<h2>Daftar Siswa</h2>
+<input id="regNama" placeholder="Nama Lengkap">
+<select id="regKelas"></select>
+<select id="regAbsen"></select>
+<button onclick="registerSiswa()">Daftar</button>
+<button class="back" onclick="backLogin()">Kembali</button>
+</div>
+
+<!-- MENU SISWA -->
+<div id="menuSiswa" class="hidden">
+<h2>Menu Siswa</h2>
+<button onclick="pilihMapel('informatika')">📘 Informatika</button>
+<button onclick="pilihMapel('kka')">🤖 KKA</button>
 <button class="back" onclick="logout()">Logout</button>
 </div>
 
-<!-- MATERI MAPEL -->
+<!-- MATERI -->
 <div id="materiBox" class="hidden">
 <h2 id="judulMapel"></h2>
 <div id="materiList"></div>
-<button class="back" onclick="backMenu()">⬅ Kembali</button>
+<button onclick="lanjutLatihan()">Lanjut ke Latihan / Kuis</button>
+<button class="back" onclick="backMenuSiswa()">⬅ Kembali</button>
+</div>
+
+<!-- LATIHAN / KUIS -->
+<div id="kuisBox" class="hidden">
+<h2>Latihan / Kuis</h2>
+<div class="card">
+<h4>1. Pilihan Ganda</h4>
+<p>AI sebaiknya digunakan untuk …</p>
+<label><input type="radio" name="pg" value="A"> Mencontek</label><br>
+<label><input type="radio" name="pg" value="B"> Membantu belajar</label><br>
+</div>
+<div class="card">
+<h4>2. Benar / Salah</h4>
+<p>Menggunakan AI tanpa memahami jawabannya adalah etis.</p>
+<select id="bs"><option>Benar</option><option>Salah</option></select>
+</div>
+<div class="card">
+<h4>3. Jawaban Singkat</h4>
+<input id="singkat" placeholder="Jawaban singkat">
+</div>
+<div class="card">
+<h4>4. Jawaban Panjang</h4>
+<textarea id="panjang" placeholder="Tuliskan pendapatmu"></textarea>
+</div>
+<button onclick="kirimJawaban()">Kirim Jawaban</button>
+<p id="hasil"></p>
+<button class="back" onclick="backMenuSiswa()">⬅ Kembali</button>
 </div>
 
 <!-- MENU GURU -->
 <div id="guruBox" class="hidden">
-<h2>Menu Guru – Tambah Materi</h2>
-<select id="mapel">
+<h2>Menu Guru – Kelola Materi</h2>
+<select id="mapelGuru">
 <option value="informatika">Informatika</option>
 <option value="kka">KKA</option>
 </select>
-<input id="judul" placeholder="Judul Materi">
-<textarea id="isi" placeholder="Isi materi (teks)"></textarea>
-<input id="file" placeholder="Link file PDF/DOCX (Google Drive, dll)">
-<input id="video" placeholder="Link video YouTube">
+<input id="judulMateri" placeholder="Judul Materi">
+<textarea id="isiMateri" placeholder="Isi Materi"></textarea>
+<input id="linkFile" placeholder="Link File (PDF/DOCX/PPTX)">
+<input id="linkVideo" placeholder="Link Video YouTube">
 <button onclick="simpanMateri()">Simpan Materi</button>
-<button class="back" onclick="backMenu()">⬅ Kembali</button>
+<button class="back" onclick="logout()">Logout</button>
 </div>
 
 </div>
 
 <script>
-// data awal
-let users=[{u:'guru',p:'admin123'}];
+// init kelas & absen
+for(let i=1;i<=10;i++) regKelas.innerHTML+=`<option>X-${i}</option>`;
+for(let i=1;i<=40;i++) regAbsen.innerHTML+=`<option>${i}</option>`;
+
+let siswa=JSON.parse(localStorage.getItem('siswa'))||[];
 let materi=JSON.parse(localStorage.getItem('materi'))||{informatika:[],kka:[]};
 let currentMapel='';
+let sudahBacaMateri=false;
 
-function login(){
- let u=user.value,p=pass.value;
- let ok=users.find(x=>x.u===u&&x.p===p);
- if(!ok){alert('Login gagal');return;}
+function showRegister(){loginBox.classList.add('hidden');registerBox.classList.remove('hidden');}
+function backLogin(){registerBox.classList.add('hidden');loginBox.classList.remove('hidden');}
+
+function registerSiswa(){
+ siswa.push({nama:regNama.value,kelas:regKelas.value,absen:regAbsen.value});
+ localStorage.setItem('siswa',JSON.stringify(siswa));
+ alert('Pendaftaran berhasil');
+ backLogin();
+}
+
+function loginSiswa(){
+ let nama=loginUser.value;
+ let cek=siswa.find(s=>s.nama===nama);
+ if(!cek){alert('Siswa belum terdaftar');return;}
  loginBox.classList.add('hidden');
- mainMenu.classList.remove('hidden');
+ menuSiswa.classList.remove('hidden');
 }
-function logout(){location.reload();}
 
-function openMapel(m){
- currentMapel=m;
- mainMenu.classList.add('hidden');
- materiBox.classList.remove('hidden');
- judulMapel.innerText=m==='informatika'?'Materi Informatika':'Materi KKA';
- tampilMateri();
+function loginGuru(){
+ if(guruUser.value==='guru' && guruPass.value==='admin123'){
+  loginBox.classList.add('hidden');
+  guruBox.classList.remove('hidden');
+ }else alert('Login guru gagal');
 }
+
+function pilihMapel(m){currentMapel=m;menuSiswa.classList.add('hidden');materiBox.classList.remove('hidden');judulMapel.innerText=m==='informatika'?'Materi Informatika':'Materi KKA';tampilMateri();}
 
 function tampilMateri(){
  materiList.innerHTML='';
+ sudahBacaMateri=true;
  materi[currentMapel].forEach(m=>{
-  materiList.innerHTML+=`
-  <div class='card'>
-  <h3>${m.judul}</h3>
-  <p>${m.isi}</p>
-  ${m.file?`<p>📎 <a href='${m.file}' target='_blank'>File Materi</a></p>`:''}
-  ${m.video?`<p>🎥 <a href='${m.video}' target='_blank'>Video Pembelajaran</a></p>`:''}
-  </div>`;
+  materiList.innerHTML+=`<div class='card'><h3>${m.judul}</h3><p>${m.isi}</p>${m.file?`<p>📎 <a href='${m.file}' target='_blank'>File Materi</a></p>`:''}${m.video?`<p>🎥 <a href='${m.video}' target='_blank'>Video</a></p>`:''}</div>`;
  });
 }
 
-function openGuru(){
- mainMenu.classList.add('hidden');
- guruBox.classList.remove('hidden');
+function lanjutLatihan(){
+ if(!sudahBacaMateri){alert('Pelajari materi terlebih dahulu');return;}
+ materiBox.classList.add('hidden');
+ kuisBox.classList.remove('hidden');
 }
+
+function kirimJawaban(){hasil.innerText='Jawaban berhasil dikirim. Terima kasih sudah belajar dengan jujur.';}
+
+function backMenuSiswa(){materiBox.classList.add('hidden');kuisBox.classList.add('hidden');menuSiswa.classList.remove('hidden');}
+function logout(){location.reload();}
 
 function simpanMateri(){
- let m=mapel.value;
- materi[m].push({judul:judul.value,isi:isi.value,file:file.value,video:video.value});
+ materi[mapelGuru.value].push({judul:judulMateri.value,isi:isiMateri.value,file:linkFile.value,video:linkVideo.value});
  localStorage.setItem('materi',JSON.stringify(materi));
  alert('Materi disimpan');
- judul.value=isi.value=file.value=video.value='';
-}
-
-function backMenu(){
- materiBox.classList.add('hidden');
- guruBox.classList.add('hidden');
- mainMenu.classList.remove('hidden');
+ judulMateri.value=isiMateri.value=linkFile.value=linkVideo.value='';
 }
 </script>
 </body>
