--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@ input,select,textarea{width:100%;padding:8px;margin:5px 0}
 <input id="regNama" placeholder="Nama Lengkap">
 <input id="regUser" placeholder="Username">
 <input id="regPass" type="password" placeholder="Password">
+
+<select id="regKelas">
+ <option value="">Pilih Kelas</option>
+</select>
+
+<select id="regAbsen">
+ <option value="">Pilih Absen</option>
+</select>
+
 <button onclick="registerSiswa()">Daftar</button>
 <button onclick="backLogin()">Kembali</button>
 </div>
@@ -234,4 +243,5 @@ function logout(){location.reload()}
 
 </body>
 </html>
+
 
