--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@ input,select,textarea{width:100%;padding:8px;margin:5px 0}
 <p id="infoLogin"></p>
 <button onclick="showRegister()">Daftar Siswa</button>
 </div>
+// INIT KELAS & ABSEN
+for(let i=1;i<=10;i++){
+ regKelas.innerHTML += `<option value="X-${i}">X-${i}</option>`;
+}
+
+for(let i=1;i<=40;i++){
+ regAbsen.innerHTML += `<option value="${i}">${i}</option>`;
+}
 
 <!-- REGISTER -->
 <div id="registerBox" class="card hidden">
@@ -243,5 +251,6 @@ function logout(){location.reload()}
 
 </body>
 </html>
+
 
 
