--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="bg-blue-600 w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4 text-white text-2xl shadow-lg">
                     <i class="fas fa-graduation-cap"></i>
                 </div>
-                <h1 class="text-2xl font-bold text-gray-900">EduSiswa LMS</h1>
+                <h1 class="text-2xl font-bold text-gray-900">LMS Kimia</h1>
                 <p class="text-gray-500 text-sm">Portal Pembelajaran SMA Digital</p>
             </div>
 
@@ -961,3 +961,4 @@
     </script>
 </body>
 </html>
+
