--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <i class="fas fa-graduation-cap"></i>
                 </div>
                 <h1 class="text-2xl font-bold text-gray-900">LMS Kimia</h1>
-                <p class="text-gray-500 text-sm">Portal Pembelajaran SMA Digital</p>
+                <p class="text-gray-500 text-sm">Portal Pembelajaran Kimia Digital</p>
             </div>
 
             <!-- Login Form -->
@@ -117,7 +117,7 @@
         <aside class="w-full md:w-64 bg-slate-900 text-white flex flex-col shadow-2xl z-20">
             <div class="p-6 border-b border-slate-700 flex items-center gap-3">
                 <i class="fas fa-graduation-cap text-yellow-400 text-2xl"></i>
-                <span class="font-bold text-xl tracking-tight">EduSiswa</span>
+                <span class="font-bold text-xl tracking-tight">LMS Kimia</span>
             </div>
             
             <!-- User Info Mini -->
@@ -143,7 +143,7 @@
         <main class="flex-1 flex flex-col overflow-hidden bg-gray-50 relative">
             <!-- Header Mobile Only -->
             <header class="md:hidden bg-white p-4 shadow-sm flex justify-between items-center">
-                <span class="font-bold text-gray-800">EduSiswa LMS</span>
+                <span class="font-bold text-gray-800">LMS Kimia</span>
                 <button onclick="alert('Gunakan tampilan Desktop untuk fitur admin penuh')" class="text-gray-600"><i class="fas fa-bars"></i></button>
             </header>
 
@@ -961,4 +961,5 @@
     </script>
 </body>
 </html>
+
 
