--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <i class="fas fa-graduation-cap"></i>
                 </div>
                 <h1 class="text-2xl font-bold text-gray-900">LMS Kimia</h1>
-                <p class="text-gray-500 text-sm">Portal Pembelajaran Kimia Digital</p>
+                <p class="text-gray-500 text-sm">Portal Pembelajaran Kimia Bu Lina</p>
             </div>
 
             <!-- Login Form -->
@@ -961,5 +961,6 @@
     </script>
 </body>
 </html>
+
 
 
