--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         // ==========================================
         const SCHOOL_CONFIG = {
             // Ganti URL di bawah ini dengan link gambar logo Anda
-            // Contoh: 'https://sekolah.sch.id/logo.png' atau link dari Google Drive/Imgur
+            // Contoh: 'https://drive.google.com/file/d/1umEerhElx0F4Qs0gVij9XuF-3t-dRakd/view?usp=sharing' atau link dari Google Drive/Imgur
             // Jika kosong (''), akan menggunakan ikon topi wisuda default.
             logoUrl: '', 
             
@@ -1053,3 +1053,4 @@
     </script>
 </body>
 </html>
+
