--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             // Ganti URL di bawah ini dengan link gambar logo Anda
             // Contoh: 'https://drive.google.com/file/d/1umEerhElx0F4Qs0gVij9XuF-3t-dRakd/view?usp=sharing' atau link dari Google Drive/Imgur
             // Jika kosong (''), akan menggunakan ikon topi wisuda default.
-            logoUrl: 'https://imgur.com/xjrqTvP', 
+            logoUrl: '[img]https://i.imgur.com/xjrqTvP.jpeg[/img]', 
             
             // Nama Aplikasi / Sekolah
             appName: 'Kelas Kimia Bu Lina',
@@ -1053,6 +1053,7 @@
     </script>
 </body>
 </html>
+
 
 
 
