--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div id="auth-logo" class="w-20 h-20 bg-amber-500 rounded-full mx-auto mb-4 flex items-center justify-center text-white text-3xl shadow-inner border-4 border-white overflow-hidden">
                 <img src="https://i.imgur.com/xjrqTvP.jpeg" class="w-full h-full object-cover" alt="Logo">
             </div>
-            <h1 id="auth-title" class="text-2xl font-bold text-amber-900">LMS Kimia</h1>
-            <p id="auth-subtitle" class="text-xs text-amber-700 mb-6 italic">Selamat Datang di Portal Pembelajaran</p>
+            <h1 id="auth-title" class="text-2xl font-bold text-amber-900">LMS Kimia Bu Lina</h1>
+            <p id="auth-subtitle" class="text-xs text-amber-700 mb-6 italic">Selamat Datang di Kelas Digital Kimia</p>
 
             <!-- Form Login -->
             <div id="login-section">
@@ -482,3 +482,4 @@
     </script>
 </body>
 </html>
+
