--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
                 <div class="flex items-center justify-center h-full p-4">
                     <div class="bg-white p-8 rounded-3xl shadow-xl border-2 border-amber-100 w-full max-w-md fade-in">
                         <div class="text-center mb-6">
-                            <https://i.imgur.com/lWFoN7N.jpeg>
+                            <!-- LOGO DIGANTI DISINI -->
+                            <img src="https://i.imgur.com/lWFoN7N.jpeg" class="h-24 w-24 mx-auto mb-4 object-cover rounded-full border-2 border-amber-100" alt="Logo Sekolah">
+                            
                             <h1 class="text-2xl font-bold text-amber-900">LMS Kimia</h1>
                             <p class="text-amber-600 text-sm">Silakan Login untuk Masuk</p>
                         </div>
@@ -957,4 +959,3 @@
     </script>
 </body>
 </html>
-
